--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Premium Shoes Factory - Home</title>
+    <title>Shoemaster Footwear - Home</title>
     <style>
         * {
             margin: 0;
@@ -351,15 +351,15 @@
         <div class="header-top">
             <div class="container">
                 <div class="contact-info">
-                    <a href="tel:+1234567890">📞 +123 456 7890</a>
-                    <a href="mailto:info@shoesfactory.com">✉️ info@shoesfactory.com</a>
+                    <a href="tel:+8801995516383">📞 +880 1995 516383</a>
+                    <a href="mailto:rahan779221@gmail.com">✉️ rahán779221@gmail.com</a>
                 </div>
-                <div>🌍 Manufacturing Excellence Since 1990</div>
+                <div>🌍 Manufacturing Excellence Since 2017</div>
             </div>
         </div>
         <nav>
             <div class="container nav-container">
-                <a href="index.html" class="logo">Shoes<span>Factory</span></a>
+                <a href="index.html" class="logo">Shoemaster<span>Footwear</span></a>
                 <button class="mobile-menu-btn" onclick="toggleMenu()">☰</button>
                 <ul class="nav-links" id="navLinks">
                     <li><a href="index.html" class="active">Home</a></li>
@@ -425,7 +425,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>ShoesFactory</h3>
+                    <h3>Shoemaster Footwear</h3>
                     <p>Leading footwear manufacturer delivering quality and innovation since 1990.</p>
                 </div>
                 <div class="footer-section">
@@ -438,12 +438,12 @@
                 <div class="footer-section">
                     <h3>Contact Info</h3>
                     <p>📍 123 Industrial Zone, Manufacturing City</p>
-                    <p>📞 +123 456 7890</p>
-                    <p>✉️ info@shoesfactory.com</p>
+                    <p>📞 +880 1995 516383</p>
+                    <p>✉️ rahán779221@gmail.com</p>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 ShoesFactory. All rights reserved.</p>
+                <p>&copy; 2025 Shoemaster Footwear. All rights reserved.</p>
             </div>
         </div>
     </footer>
